kubernetes/002-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-summary-lens-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-summary-lens-python
  template:
    metadata:
      labels:
        app: external-summary-lens-python
    spec:
      containers:
      - name: external-summary-lens-python
        image: gravitate-registry.cr.de-fra.ionos.com/external-summary-lens-python:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
status: {}
