kubernetes/001-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-summary-lens-python
  labels:
    name: external-summary-lens-python
spec:
  selector:
    app: external-summary-lens-python
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
